# claude-md-mcp-server-guide

./: .gitignore  CLAUDE-CUSTOMIZATION-GUIDE.md  CLAUDE-KO.md  CLAUDE.md  README.md  pyproject.toml  server.py
src/resources/: system_info.py
src/tools/: calculator.py  text_utils.py
